# kyber

./: .astylerc  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Common_META.yml  Kyber1024-90s_META.yml  Kyber1024_META.yml  Kyber512-90s_META.yml  Kyber512_META.yml  Kyber768-90s_META.yml  Kyber768_META.yml  README.md  SHA256SUMS  generate.py  runlcov.sh  runtests.sh  testvecdiff.sh
avx2/: .gitignore  CMakeLists.txt  Makefile  PQCgenKAT_kem.c  aes256ctr.c  aes256ctr.h  align.h  api.h  basemul.S  basemul.s  bench.c  cbd.c  cbd.h  cbd.s  cbdeta4.s  consts.c  consts.h  cpucycles.c  cpucycles.h  crypto_stream.h  crypto_stream_aes256ctr.c  fastrandombytes.c  fips202.c  fips202.h  fips202x4.c  fips202x4.h  fq.S  fq.inc  fq.s  genmatrix.c  indcpa.c  invntt.S  invntt.s  invnttasm.s  kem.c  kernelrandombytes.c  kernelrandombytes.h  kex.c  kex.h  kyber.c  (+46 more)
avx2/keccak4x/: KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h  KeccakP-1600-unrolling.macros  KeccakP-SIMD256-config.h  KeccakP-align.h
avx2/test/: speed.c  test_kyber.c  testvectors.c
cm4/: main.c
cm4/lib/cpucycles/: cpucycles.c  cpucycles.h
cm4/lib/kyber/: KeccakP-1600-inplace-32bi-armv7m-le-gcc.S  fips202.c  fips202.h  indcpa.c  kem.c  kex.h  kyber.S  ntt.c  poly.c  precomp.c  verify.c
cm4/lib/randombytes/: randombytes.c  randombytes.h
make/avx2/: Makefile  Makefile.Microsoft_nmake
make/clean/: Makefile  Makefile.Microsoft_nmake
make/clean-90s/: Makefile  Makefile.Microsoft_nmake
params/: params-kyber1024-90s.h  params-kyber1024.h  params-kyber512-90s.h  params-kyber512.h  params-kyber768-90s.h  params-kyber768.h
ref/: .gitignore  CMakeLists.txt  Makefile  PQCgenKAT_kem.c  aes256ctr.c  aes256ctr.h  api.h  bench.c  cbd.c  cbd.h  compat.h  cpucycles.c  cpucycles.h  fips202.c  fips202.h  indcpa.c  indcpa.h  kem.c  kem.h  kex.c  kex.h  kyber.c  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  precomp.c  randombytes.c  randombytes.h  reduce.c  reduce.h  rng.c  rng.h  sha2.h  sha256.c  sha512.c  speed.c  (+13 more)
ref/test/: cpucycles.c  cpucycles.h  speed.c  speed_print.c  speed_print.h  test_kex.c  test_kyber.c  test_speed.c  test_vectors.c  testvectors.c
scripts/: Kyber.py  Kyber_failure.py  MLWE_security.py  model_BKZ.py  proba_util.py
